# goma-client

./: .gitignore  .vpython  .vpython3  BUILD.gn  DEPS  OWNERS  PRESUBMIT.py  README.md  codereview.settings  commit-queue.cfg  cr-buildbucket.cfg  luci-milo.cfg  luci-scheduler.cfg  project.cfg  realms.cfg
base/: BUILD.gn  file_dir.cc  file_dir.h  filesystem.cc  filesystem.h  filesystem_unittest.cc  lockhelper.cc  lockhelper.h  lockhelper_unittest.cc  path.cc  path.h  socket_helper_win.cc  socket_helper_win.h  socket_helper_win_unittest.cc  status.h
benchmark/: BUILD.gn  cpp_parser_benchmark.cc  file_stat_benchmark.cc
client/: BUILD.gn  auto_updater.cc  auto_updater.h  autolock_timer.cc  autolock_timer.h  basictypes.h  cache_file.cc  calculate_sha256.py  callback.h  clang_features.cc  compilation_database_reader.cc  compilation_database_reader.h  compilation_database_reader_unittest.cc  compile_service.cc  compile_service.h  compile_stats.cc  compile_stats.h  compile_task.cc  compile_task.h  compile_task_unittest.cc  compiler_flags_util.cc  compiler_flags_util.h  compiler_flags_util_unittest.cc  compiler_info.cc  compiler_info.h  compiler_info_builder.cc  compiler_info_builder.h  compiler_info_builder_unittest.cc  compiler_info_cache.cc  compiler_info_cache.h  compiler_info_cache_unittest.cc  compiler_info_data.proto  compiler_info_state.cc  compiler_info_state.h  compiler_proxy.cc  compiler_proxy_http_handler.cc  compiler_proxy_http_handler.h  compiler_type_specific.cc  compiler_type_specific.h  compiler_type_specific_collection.cc  (+202 more)
client/binutils/: BUILD.gn  elf_dep_parser.cc  elf_dep_parser.h  elf_dep_parser_unittest.cc  elf_parser.cc  elf_parser.h  elf_parser_main.cc  elf_parser_unittest.cc  elf_util.cc  elf_util.h  elf_util_unittest.cc  mach_o_parser.cc  mach_o_parser.h
client/blob/: file_blob_downloader.cc  file_service_blob_downloader.cc  file_service_blob_uploader.cc  file_service_blob_uploader.h
client/certs/: BUILD.gn
client/clang_tidy/: BUILD.gn  clang_tidy_compiler_info_builder.cc  clang_tidy_compiler_info_builder.h  clang_tidy_compiler_info_builder_unittest.cc  clang_tidy_compiler_type_specific.cc  clang_tidy_compiler_type_specific.h
client/cxx/: BUILD.gn  chromeos_compiler_info_builder_helper.cc  chromeos_compiler_info_builder_helper.h  chromeos_compiler_info_builder_helper_unittest.cc  clang_compiler_info_builder_helper.cc  clang_compiler_info_builder_helper.h  clang_compiler_info_builder_helper_unittest.cc  cxx_compiler_info.cc  cxx_compiler_info.h  cxx_compiler_info_builder.cc  cxx_compiler_info_builder.h  cxx_compiler_info_builder_unittest.cc  cxx_compiler_type_specific.cc  cxx_compiler_type_specific.h  elf_util.cc  elf_util.h  elf_util_unittest.cc  gcc_compiler_info_builder.cc  gcc_compiler_info_builder.h  gcc_compiler_info_builder_unittest.cc  gcc_compiler_type_specific.cc  gcc_compiler_type_specific.h  nacl_compiler_info_builder_helper.cc  nacl_compiler_info_builder_helper.h  vc_compiler_info_builder.cc  vc_compiler_info_builder.h  vc_compiler_info_builder_unittest.cc  vc_compiler_type_specific.cc  vc_compiler_type_specific.h
client/dart_analyzer/: BUILD.gn  dart_analyzer_compiler_info.cc  dart_analyzer_compiler_info.h  dart_analyzer_compiler_info_builder.cc  dart_analyzer_compiler_info_builder.h  dart_analyzer_compiler_info_builder_unittest.cc  dart_analyzer_compiler_type_specific.cc  dart_analyzer_compiler_type_specific.h  dart_include_processor.cc  dart_include_processor.h  dart_include_processor_unittest.cc
client/fake/: BUILD.gn  fake_compiler_info_builder.cc  fake_compiler_info_builder.h  fake_compiler_info_builder_unittest.cc  fake_compiler_type_specific.cc  fake_compiler_type_specific.h  fake_include_processor.cc  fake_include_processor.h  fake_include_processor_unittest.cc
client/java/: BUILD.gn  jar_parser.cc  jar_parser.h  jar_parser_unittest.cc  jarfile_normalizer.cc  jarfile_reader.cc  jarfile_reader_unittest.cc  java_compiler_info_builder.cc  java_compiler_info_builder.h  java_compiler_info_builder_unittest.cc  java_compiler_type_specific.cc  java_compiler_type_specific.h
client/rbe/: stats_manager.cc  stats_manager.h  stats_manager_unittest.cc
client/resources/: BUILD.gn
client/rust/: BUILD.gn  rustc_compiler_info.cc  rustc_compiler_info.h  rustc_compiler_info_builder.cc  rustc_compiler_info_builder.h  rustc_compiler_info_builder_unittest.cc  rustc_compiler_type_specific.cc  rustc_compiler_type_specific.h  rustc_include_processor.cc  rustc_include_processor.h  rustc_include_processor_unittest.cc
client/task/: compiler_flag_utils.cc  input_file_task.cc  input_file_task.h  local_output_file_task.cc  local_output_file_task.h  output_file_task.h
doc/: early-access-guide.md  gomacc_gdi32.dll.md
go/: BUILD.gn  build_http_proxy.py
go/proxy/: proxy.go
lib/: BUILD.gn  clang_flags_helper.cc  clang_flags_helper.h  clang_flags_helper_unittest.cc  clang_tidy_execreq_normalizer.cc  clang_tidy_execreq_normalizer.h  clang_tidy_execreq_normalizer_unittest.cc  clang_tidy_flags.cc  clang_tidy_flags.h  clang_tidy_flags_unittest.cc  cmdline_parser.cc  cmdline_parser.h  cmdline_parser_unittest.cc  compiler_flag_type.cc  compiler_flag_type.h  compiler_flag_type_specific.cc  compiler_flag_type_specific.h  compiler_flag_type_specific_unittest.cc  compiler_flags.cc  compiler_flags.h  compiler_flags_parser.cc  compiler_flags_parser.h  compiler_flags_unittest.cc  compress_util.cc  compress_util.h  compress_util_unittest.cc  cxx_flags.h  dart_analyzer_execreq_normalizer.cc  dart_analyzer_execreq_normalizer.h  dart_analyzer_flags.cc  dart_analyzer_flags.h  dart_analyzer_flags_unittest.cc  execreq_normalizer.cc  execreq_normalizer.h  execreq_normalizer_unittest.cc  fake_execreq_normalizer.cc  fake_execreq_normalizer.h  fake_flags.cc  fake_flags.h  fake_flags_unittest.cc  (+53 more)
test/: cert.pem  clang  clang.dontexec  goma_auth_test.py  goma_ctl_test.py  gomacc_close.py  key.pem  openssl.cnf  simpletry.py  simpletry.sh  simpletry_rbe.py  verify_normalized_jar.py  wrapper-clang
test/src/: Bar.java  Foo.java  (+2 more)
testing/: test.gni
tools/: licenses.py
(+95 files in other folders)
