# Copyright 2019 The Goma Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("dart_analyzer_compiler_info_lib") {
  sources = [
    "dart_analyzer_compiler_info.cc",
    "dart_analyzer_compiler_info.h",
  ]

  public_deps = [ "//client:compiler_info_lib" ]
}

static_library("dart_include_processor_lib") {
  sources = [
    "dart_include_processor.cc",
    "dart_include_processor.h",
  ]
  public_deps = [ ":dart_analyzer_compiler_info_lib" ]
  deps = [
    "//client:common",
    "//client:content_lib",
    "//lib:dart_analyzer_specific",
    "//third_party/libyaml",
  ]

  public_configs = [ "//client:client_config" ]
}

static_library("dart_analyzer_compiler_type_specific") {
  sources = [
    "dart_analyzer_compiler_type_specific.cc",
    "dart_analyzer_compiler_type_specific.h",
  ]

  public_deps = [
    ":dart_analyzer_compiler_info_builder_lib",
    ":dart_analyzer_compiler_info_lib",
    ":dart_include_processor_lib",
    "//client:compiler_info_lib",
    "//client:compiler_type_specific_lib",
    "//lib:dart_analyzer_specific",
  ]
}

static_library("dart_analyzer_compiler_info_builder_lib") {
  sources = [
    "dart_analyzer_compiler_info_builder.cc",
    "dart_analyzer_compiler_info_builder.h",
  ]
  deps = [
    "//client:common",
    "//client:ioutil_lib",
    "//lib:dart_analyzer_specific",
    "//third_party:glog",
    "//third_party/abseil",
  ]
  public_deps = [
    "//client:compiler_info_lib",
    "//lib",
  ]

  public_configs = [ "//client:client_config" ]
}

executable("dart_analyzer_compiler_info_builder_unittest") {
  testonly = true
  sources = [ "dart_analyzer_compiler_info_builder_unittest.cc" ]

  deps = [
    ":dart_analyzer_compiler_info_builder_lib",
    ":dart_analyzer_compiler_info_lib",
    "//build/config:exe_and_shlib_deps",
    "//client:common",
    "//client:compiler_info_lib",
    "//client:goma_test_lib",
    "//client:subprocess_lib",
    "//lib:dart_analyzer_specific",
  ]
}

executable("dart_include_processor_unittest") {
  testonly = true
  sources = [ "dart_include_processor_unittest.cc" ]

  deps = [
    ":dart_include_processor_lib",
    "//build/config:exe_and_shlib_deps",
    "//client:goma_test_lib",
    "//lib:dart_analyzer_specific",
  ]
}
