# Copyright 2019 The Goma Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("rustc_compiler_info_lib") {
  sources = [
    "rustc_compiler_info.cc",
    "rustc_compiler_info.h",
  ]

  public_deps = [
    "//client:compiler_info_lib",
  ]
}

static_library("rustc_compiler_type_specific") {
  sources = [
    "rustc_compiler_type_specific.cc",
    "rustc_compiler_type_specific.h",
  ]

  deps = [
    ":rustc_include_processor_lib",
  ]

  public_deps = [
    ":rustc_compiler_info_builder_lib",
    "//client:compiler_info_lib",
    "//client:compiler_type_specific_lib",
  ]
}

static_library("rustc_compiler_info_builder_lib") {
  sources = [
    "rustc_compiler_info_builder.cc",
    "rustc_compiler_info_builder.h",
  ]
  deps = [
    "//client:common",
    "//client:ioutil_lib",
    "//lib:rust_specific",
    "//third_party:glog",
    "//third_party/abseil",
  ]
  public_deps = [
    "//client:compiler_info_lib",
    "//lib",
  ]

  public_configs = [ "//client:client_config" ]
}

static_library("rustc_include_processor_lib") {
  sources = [
    "rustc_include_processor.cc",
    "rustc_include_processor.h",
  ]
  public_deps = [
    ":rustc_compiler_info_lib",
  ]
  deps = [
    "//client:common",
    "//lib:rust_specific",
  ]

  public_configs = [ "//client:client_config" ]
}

executable("rustc_compiler_info_builder_unittest") {
  testonly = true
  sources = [
    "rustc_compiler_info_builder_unittest.cc",
  ]

  deps = [
    ":rustc_compiler_info_builder_lib",
    ":rustc_compiler_info_lib",
    "//build/config:exe_and_shlib_deps",
    "//client:compiler_info_lib",
    "//client:goma_test_lib",
    "//lib:rust_specific",
  ]
}

executable("rustc_include_processor_unittest") {
  testonly = true
  sources = [
    "rustc_include_processor_unittest.cc",
  ]

  deps = [
    ":rustc_include_processor_lib",
    "//build/config:exe_and_shlib_deps",
    "//client:goma_test_lib",
    "//lib:rust_specific",
  ]
}
